garbage_collection 공부

--- a/HTML/시멘틱마크업.md
+++ b/HTML/시멘틱마크업.md
@@ -39,4 +39,4 @@ div태그로만으로도 모든 마크업을 할수 있지만 시각적으로만
 
 정말 일부분인 예시지만 정말 많은 부분에서 접근성을 고려하기 위해 여러 방법이 있다. ARIA(Accessible Rich Internet Applications) 속성에도 굉장히 많은 접근성을 고려 할수 있게해준다.
 
-![Untitled](../img/symentic.png)
+![Untitled](IdeaProjects/TIL/JAVA/img/symentic.png)
